src/index.css
* {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: Benzin;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  width: 100vw;
  background-color: #0C0B0B;
  color: white;
  background: radial-gradient(circle, rgba(255,255,255,0.6) 0%, black 35%, #0C0B0B 100%);
  background-repeat: no-repeat;
  padding-top: 50px;
  overflow: hidden;
}

body.other-page {
  background: none;
  background-color: #000;
  display: block;
}

html, body, #root, .App {
  background-color: #000;
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: #000;
    color: #fff;
  }
}

